# FXNativeEmbed

./: .project  README.md  pom.xml
.github/workflows/: build.yml
at.bestsolution.fxnativeembed.swing-demo/: .project  pom.xml
at.bestsolution.fxnativeembed.swing-demo/src/main/java/at/bestsolution/fxembed/swing/demo/: FXEmbedDemo.java
native/: CMakeLists.txt
native/WindowsNative/: CMakeLists.txt
native/WindowsNative/src/: windows_native.cpp
swing/: .project  pom.xml
swing-demo/: pom.xml
swing-demo/src/main/java/at/bestsolution/fxembed/swing/demo/: FXEmbedDemo.java  TabbedFxEmbed.java
swing/src/main/java/at/bestsolution/fxembed/swing/: FXEmbed.java  NativeLibraryLoader.java  VersionInfoUtil.java
swing/src/main/java/at/bestsolution/fxembed/swing/win32/: WindowsNative.java
swing/src/main/resources/at/bestsolution/fxembed/swing/: version-info.properties
